[gd_scene load_steps=4 format=3 uid="uid://7l7r07tjgtu"]

[ext_resource type="Script" path="res://Scripts/tooltip_icon_amount.gd" id="1_c432c"]
[ext_resource type="Texture2D" uid="uid://dgfls2rebh2dp" path="res://Sprites/Icons/stone.png" id="2_iwf0g"]
[ext_resource type="FontFile" uid="uid://c0dm4ewi5648q" path="res://Fonts/press_start_2p/PressStart2P.ttf" id="3_uqcq5"]

[node name="TooltipIconAmount" type="HBoxContainer"]
custom_minimum_size = Vector2(68, 16)
mouse_filter = 2
script = ExtResource("1_c432c")

[node name="IconRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_iwf0g")
stretch_mode = 3

[node name="AmountLabel" type="Label" parent="."]
custom_minimum_size = Vector2(48, 16)
layout_mode = 2
theme_override_colors/font_color = Color(0.0901961, 0.0901961, 0.219608, 1)
theme_override_fonts/font = ExtResource("3_uqcq5")
theme_override_font_sizes/font_size = 8
text = "999.9M"
vertical_alignment = 1
